--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,49 @@
 @use "tailwindcss" as *;
-@plugin "daisyui";
+
+@plugin "daisyui" {
+  themes: light --default;
+}
+
+
+@plugin "daisyui/theme" {
+  name: "light";
+  default: true;
+  prefersdark: false;
+  color-scheme: "light";
+  --color-base-100: #F2EEE6;
+  --color-base-200: #F2EEE6;
+  --color-base-300: #F2EEE6;
+  --color-base-content: oklch(21% 0.006 285.885);
+  --color-primary: #fec1ba;
+  --color-primary-content: oklch(21% 0.006 285.885);
+  --color-secondary: oklch(65% 0.241 354.308);
+  --color-secondary-content: oklch(94% 0.028 342.258);
+  --color-accent: #74ccd6;
+  --color-accent-content: oklch(21% 0.006 285.885);
+  --color-neutral: oklch(14% 0.005 285.823);
+  --color-neutral-content: oklch(92% 0.004 286.32);
+  --color-info: #3BB7A0;
+  --color-info-content: oklch(29% 0.066 243.157);
+  --color-success: oklch(76% 0.177 163.223);
+  --color-success-content: oklch(37% 0.077 168.94);
+  --color-warning: oklch(82% 0.189 84.429);
+  --color-warning-content: oklch(41% 0.112 45.904);
+  --color-error: oklch(71% 0.194 13.428);
+  --color-error-content: oklch(27% 0.105 12.094);
+  --radius-selector: 0.5rem;
+  --radius-field: 0.25rem;
+  --radius-box: 0.5rem;
+  --size-selector: 0.25rem;
+  --size-field: 0.25rem;
+  --border: 1px;
+  --depth: 1;
+  --noise: 0;
+}
+
 
 @font-face {
   font-family: "Cooper Hewitt";
-  src: url("/fonts/cooper-hewitt/CooperHewitt-Book.woff")
-    format("woff");
+  src: url("/fonts/cooper-hewitt/CooperHewitt-Book.woff") format("woff");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
