--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,5 @@
 <div class="screen-full flex flex-col items-center">
-  <app-header class="w-full h-[300px]"></app-header>
+  <app-header class="w-full h-56 lg:h-72"></app-header>
 
   <main class="w-1/2 flex flex-col items-center justify-between gap-16 py-16">
     <p class="text-xl">
