--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -1,14 +1,22 @@
 <header class="w-full h-full">
-  <div class="flex justify-between items-center w-full h-full px-16">
-    <div class="flex w-full h-full items-center">
-      <img src="/assets/logo.png" alt="Maisy Miles Logo" class="h-64 " />
-      <h1>
-        <img src="/assets/logo-lettering.png" alt="Maisy Miles" class="h-64 pt-8 pl-8" />
-      </h1>
-      <!-- <img src="/assets/handmade-lettering.png" alt="Handmade text" class=" pl-16 h-24"> -->
-    </div>
-    
-    <div class="flex justify-between items-center  w-[380px] text-xl mr-16">
+  <div class="flex justify-between items-center w-full h-full px-16 relative">
+    <img
+      src="/assets/logo.png"
+      alt="Maisy Miles Logo"
+      class="h-48 lg:h-64 absolute"
+    />
+    <h1 class="mx-auto">
+      <img
+        src="/assets/logo-lettering.png"
+        alt="Maisy Miles"
+        class="h-48 xl:h-64"
+      />
+    </h1>
+    <!-- <img src="/assets/handmade-lettering.png" alt="Handmade text" class=" pl-16 h-24"> -->
+
+    <div
+      class="absolute flex justify-between items-center w-[280px] text-xl 2xl:ml-auto right-16"
+    >
       <a
         [href]="etsyUrl"
         class="btn btn-circle btn-xl btn-accent border-3 border-accent-content text-[2.6rem] w-18 h-18"
