--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,8 +1,10 @@
 <div class="screen-full flex flex-col items-center">
   <app-header class="w-full h-56 lg:h-72"></app-header>
 
-  <main class="w-1/2 flex flex-col items-center justify-between gap-16 py-16">
-    <p class="text-xl">
+  <main
+    class="w-full sm:px-16 xl:px-0 xl:w-3/4 2xl:w-7/12 flex flex-col items-center justify-between gap-16 pb-16 pt-38 sm:pt-16 lg:pt-0"
+  >
+    <p class="text-xl px-8">
       Maisy Miles is where atomic flair meets folk art enchantment. We're a
       husband-and-wife team from a small town in southwest Michigan, just a
       stone's throw from the shores of Lake Michigan. Inspired by the sleek
@@ -14,7 +16,7 @@
       extraordinary.
     </p>
 
-    <app-gallery class=""></app-gallery>
+    <app-gallery class="w-full px-4"></app-gallery>
   </main>
 
   <p class="text-center text-sm pb-8">
