--- a/src/app/components/header/header.scss
+++ b/src/app/components/header/header.scss
@@ -1,7 +1,9 @@
 header {
-  background-image: url('/assets/background-tile.png');
+  background-image: url("/assets/background-tile.png");
   background-repeat: repeat;
-  background-size: 300px 300px; 
+  background-size: 300px 300px;
 
-
+  .buttons a {
+    font-family: "Bebas Neue", "Cooper Hewitt", sans-serif;
+  }
 }
