Fix header index

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,5 @@
 <div class="screen-full flex flex-col items-center">
-  <app-header class="w-full h-56 lg:h-72"></app-header>
+  <app-header class="w-full h-56 lg:h-72 z-99"></app-header>
 
   <main
     class="w-full sm:px-16 xl:px-0 xl:w-3/4 2xl:w-7/12 flex flex-col items-center justify-between gap-16 pb-16 pt-38 sm:pt-16 lg:pt-0"
